logs/pub_sub2/build.make.134.log.stderr
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:99:17: error: ‘msg’ was not declared in this scope
     pub.publish(msg);
                 ^
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp: At global scope:
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:104:1: error: expected declaration before ‘}’ token
 }
 ^
make[2]: *** [CMakeFiles/pubvel_smart.dir/src/pubvel_smart.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_smart.dir/all] Error 2
make: *** [all] Error 2
